fix overflow

--- a/style/style.css
+++ b/style/style.css
@@ -785,6 +785,7 @@ img {
   list-style: none;
   margin-top: 40px;
   margin-bottom: 40px;
+  overflow-x: hidden;
 }
 
 @media (max-width: 1400px) {
@@ -985,6 +986,7 @@ img {
   list-style: none;
   margin-top: 40px;
   margin-bottom: 80px;
+  overflow-x: hidden;
 }
 
 @media (max-width: 1400px) {
